--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ ul {-webkit-padding-start: 0 !important;}
 .columns{background:#F2F2F2;}
 button.accordion{ background-color: #3399cc;color: #F2F2F2;cursor: pointer;padding: 10px;width: 100%;border: none;text-align: left;outline: none;font-size: 15px;transition: 0.4s;font-weight: bold;}
 button.accordion:before{content: '\02795';font-size: 13px;color: #FFFFFF !important;float: left;margin-right: 5px;}
-button.accordion.active:before{content: "\2796";color:#FFFFFF;}
+button.accordion.active:before{content: "\2796";color:#FFFFFF !important;}
 div.panel {padding: 0;background-color:#F2F2F2;max-height: 0;overflow: hidden;transition: 0.6s ease-in-out;opacity: 0;}
 div.panel.show {opacity: 1;max-height: 500px;}
 tbody tr:nth-of-type(2n) {background-color: #F2F2F2;}
