--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,9 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     float: left;
     position: relative;
     top: -75px;
-    left: 35px;
+    left: 45px;
 }
-
+@media only screen and (max-device-width: 480px) {#releasedate {left: 9px;}}
 #calendaricon {
     float:left;
     position:relative;
