--- a/css/main.css
+++ b/css/main.css
@@ -131,11 +131,18 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     float: left;
     left: 45px;
 }
-
+#calendaricon-grey {
+    float:left;
+    width:100%;
+    background:url(/images/calendar_page_grey.png) no-repeat center;
+    position:relative;
+    width: 100%;
+    height: 105px;
+}
 #calendaricon-green {
     float:left;
     width:100%;
-    background:url(http://www.wiley.com/college/dddash/images/calendar_page_green.png) no-repeat center;
+    background:url(/images/calendar_page_green.png) no-repeat center;
     position:relative;
     width: 100%;
     height: 105px;
@@ -143,7 +150,7 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
 #calendaricon-yellow {
     float:left;
     width:100%;
-    background:url(http://www.wiley.com/college/dddash/images/calendar_page_yellow.png) no-repeat center;
+    background:url(/images/calendar_page_yellow.png) no-repeat center;
     position:relative;
     width: 100%;
     height: 105px;
