--- a/css/main.css
+++ b/css/main.css
@@ -42,16 +42,37 @@ div.panel.show {
 }
 tbody tr:nth-of-type(2n) {background-color: #F2F2F2;}
 tbody {background-color: #F2F2F2;}
-th {background-color:#F2F2F2;font-weight:bold;color:#000;padding:0;}
-td {padding:0;text-align: center;}				.lightbox { display: none; }
+th {background-color:#F2F2F2;font-weight:bold;color:#000;padding:7px;}
+td {padding:7px;text-align: center;}				.lightbox { display: none; }
 
 @media all{.featherlight{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:2147483647;text-align:center;white-space:nowrap;cursor:pointer;background:#333;background:rgba(0,0,0,0)}.featherlight:last-of-type{background:rgba(0,0,0,.8)}.featherlight:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.25em}.featherlight .featherlight-content{position:relative;text-align:left;vertical-align:middle;display:inline-block;overflow:auto;padding:25px 25px 0;border-bottom:25px solid transparent;margin-left:5%;margin-right:5%;max-height:95%;background:#fff;cursor:auto;white-space:normal}.featherlight .featherlight-inner{display:block}.featherlight .featherlight-close-icon{position:absolute;z-index:9999;top:0;right:0;line-height:25px;width:25px;cursor:pointer;text-align:center;font-family:Arial,sans-serif;background:#fff;background:rgba(255,255,255,.3);color:#000}.featherlight .featherlight-image{width:100%}.featherlight-iframe .featherlight-content{border-bottom:0;padding:0}.featherlight iframe{border:0}.featherlight *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}}@media only screen and (max-width:1024px){.featherlight .featherlight-content{margin-left:10px;margin-right:10px;max-height:98%;padding:10px 10px 0;border-bottom:10px solid transparent}}
-@media screen and (max-device-width: 480px) {#releasedate {left: 9px !important;}th {padding:0;}td {padding:0;font-size:13px}.headline h1{bold 1.0em/2.5em" Helvetica Neue", Helvetica, Arial, sans-serif;}}
+@media screen and (max-device-width: 480px) {#releasedate {left: 9px !important;}th {padding:0;}td {padding:0;font-size:13px}.headline h1{bold 1.0em/2.5em" Helvetica Neue", Helvetica, Arial, sans-serif;}.lines{width:100% !important;float:none !important;}}
 #bubblechart > div > div:nth-child(1) > div > svg > g:nth-child(3) > g:nth-child(2) > g > circle:nth-child(9){display:none !important;}
 
 /*YTD Sales Line Chart Design*/
 
+/* chart_wrap: temporary responsive tag */
+#chart_wrap {
+    position: relative;
+    padding-bottom: 72%;
+    height: 0;
+    overflow:hidden;
+}
 
+#chart_wrap2 {
+    position: relative;
+    padding-bottom: 32%;
+    height: 0;
+    overflow:hidden;
+}
+
+#chart_wrap3 {
+    position: absolute;
+    padding-bottom: 30%;
+    height: 0;
+    overflow:hidden;
+	width:40%;
+}
 
 .lines {
     width:22%;
@@ -111,6 +132,15 @@ td {padding:0;text-align: center;}				.lightbox { display: none; }
     left: 45px;
 }
 
+
+#calendaricon-grey {
+    float:left;
+    width:100%;
+    background:url(http://www.wiley.com/college/dddash/images/calendar_page_grey.png) no-repeat center;
+    position:relative;
+    width: 100%;
+    height: 105px;
+}
 #calendaricon-green {
     float:left;
     width:100%;
@@ -127,7 +157,7 @@ td {padding:0;text-align: center;}				.lightbox { display: none; }
     width: 100%;
     height: 105px;
 }
-#calendaricon-yellow p, #calendaricon-green p{
+#calendaricon-yellow p, #calendaricon-green p, #calendaricon-grey p{
     top: 28px;
     position: absolute;
     font-size: 24px;
@@ -202,58 +232,3 @@ td {padding:0;text-align: center;}				.lightbox { display: none; }
     z-index: 2;
 }
 
-/*Media Query - Smartphone layout */
-
-@media only screen and (max-width: 500px){
-    body {
-        width:100%;
-        float:left;
-        position:relative;
-    }
-    .container {
-        width:100%;
-        float:left;
-        position:relative;
-        margin:0 auto;
-        padding:0;
-    }
-    .lines {
-        float:left;
-        position:relative;
-        width:100%;
-    }
-    
-    .headline h1 {
-    color: #FFFFFF;
-    text-transform: uppercase;
-    text-align: left;
-    font-weight: bold;
-    margin-left: 1%;
-    font-size: 18px;
-    line-height: 42.9px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}    
-    .headline h1 img {
-        float: right;
-        padding-right: 12% !important;
-    }
-    
-    #chart_div {
-    width: 95%;
-    height: 88%;
-    float: left;
-    position: relative;
-    margin-left: 3%;
-    margin-top: 10px; 
-    }
-    
-    #bubblechart {
-    width: 100%;
-    height: 100%;
-    float: left;
-    position:relative;
-    margin-top:0% !important;
-    margin-left: 5% !important;
-    margin-bottom: 2%;
-    }
-}
