--- a/css/main.css
+++ b/css/main.css
@@ -232,3 +232,59 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     z-index: 2;
 }
 
+/*Media Query - Smartphone layout */
+
+@media only screen and (max-width: 500px){
+    body {
+        width:100%;
+        float:left;
+        position:relative;
+    }
+    .container {
+        width:100%;
+        float:left;
+        position:relative;
+        margin:0 auto;
+        padding:0;
+    }
+    .lines {
+        float:left;
+        position:relative;
+        width:100%;
+    }
+    
+    .headline h1 {
+    color: #FFFFFF;
+    text-transform: uppercase;
+    text-align: left;
+    font-weight: bold;
+    margin-left: 1%;
+    font-size: 18px;
+    line-height: 42.9px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}    
+    .headline h1 img {
+        float: right;
+        padding-right: 12% !important;
+    }
+    
+    #chart_div {
+    width: 95%;
+    height: 88%;
+    float: left;
+    position: relative;
+    margin-left: 3%;
+    margin-top: 10px; 
+    }
+    
+    #bubblechart {
+    width: 100%;
+    height: 100%;
+    float: left;
+    position:relative;
+    margin-top:0% !important;
+    margin-left: 5% !important;
+    margin-bottom: 2%;
+    }
+}
+
