--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
+/*Import Google Fonts Here*/
+@import 'https://fonts.googleapis.com/css?family=Open+Sans';
+
+
 img{max-height:100%;max-width:100%}#nt-example2 {max-width: 100%;margin: auto;border:1px solid #000;margin-bottom:1.2em;}
 ul {-webkit-padding-start: 0 !important;}
 #nt-example2 li::before {content:"NEWS";color:#FFF;padding-right:1.3em;}
 #nt-example2 li {color: #000;background-image:linear-gradient(to right,#3399cc,#3399cc 85px,#ffffff 85px,#ffffff 85%,#ffffff 85%);position:static;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;height:27px;line-height: 30px;list-style: none;text-align: left;padding: 0 16px 0 16px;font-size:18px;}
 .headline {width:100%;height:40px;background:#3399CC;}
-.headline h1 {color:#FFFFFF; text-transform:uppercase; text-align:center; font-weight: bold;font-size:19.5px;line-height:42.9px;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
+.headline h1 {color:#FFFFFF; text-transform:uppercase; text-align:center; font-weight: bold;font-size:19.5px;line-height:42.9px;font-family: 'Open Sans', sans-serif;}
 .columns{background:#F2F2F2;}
 button.accordion {
     background-color: #3399cc;
@@ -43,9 +47,9 @@ div.panel.show {
 tbody tr:nth-of-type(2n) {background-color: #F2F2F2;}
 tbody {background-color: #F2F2F2;}
 th {background-color:#F2F2F2;font-weight:bold;color:#000;padding:7px;}
-td {padding:7px;text-align: center;}				.lightbox { display: none; }
+td {padding:0px;text-align: center;}				.lightbox { display: none; }
 
-@media all{.featherlight{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:2147483647;text-align:center;white-space:nowrap;cursor:pointer;background:#333;background:rgba(0,0,0,0)}.featherlight:last-of-type{background:rgba(0,0,0,.8)}.featherlight:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.25em}.featherlight .featherlight-content{position:relative;text-align:left;vertical-align:middle;display:inline-block;overflow:auto;padding:25px 25px 0;border-bottom:25px solid transparent;margin-left:5%;margin-right:5%;max-height:95%;background:#fff;cursor:auto;white-space:normal}.featherlight .featherlight-inner{display:block}.featherlight .featherlight-close-icon{position:absolute;z-index:9999;top:0;right:0;line-height:25px;width:25px;cursor:pointer;text-align:center;font-family:Arial,sans-serif;background:#fff;background:rgba(255,255,255,.3);color:#000}.featherlight .featherlight-image{width:100%}.featherlight-iframe .featherlight-content{border-bottom:0;padding:0}.featherlight iframe{border:0}.featherlight *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}}@media only screen and (max-width:1024px){.featherlight .featherlight-content{margin-left:10px;margin-right:10px;max-height:98%;padding:10px 10px 0;border-bottom:10px solid transparent}}
+@media all{.featherlight{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:2147483647;text-align:center;white-space:nowrap;cursor:pointer;background:#333;background:rgba(0,0,0,0)}.featherlight:last-of-type{background:rgba(0,0,0,.8)}.featherlight:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.25em}.featherlight .featherlight-content{position:relative;text-align:left;vertical-align:middle;display:inline-block;overflow:auto;padding:25px 25px 0;border-bottom:25px solid transparent;margin-left:5%;margin-right:5%;max-height:95%;background:#fff;cursor:auto;white-space:normal}.featherlight .featherlight-inner{display:block}.featherlight .featherlight-close-icon{position:absolute;z-index:9999;top:0;right:0;line-height:25px;width:25px;cursor:pointer;text-align:center;font-family: 'Open Sans', sans-serif;background:#fff;background:rgba(255,255,255,.3);color:#000}.featherlight .featherlight-image{width:100%}.featherlight-iframe .featherlight-content{border-bottom:0;padding:0}.featherlight iframe{border:0}.featherlight *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}}@media only screen and (max-width:1024px){.featherlight .featherlight-content{margin-left:10px;margin-right:10px;max-height:98%;padding:10px 10px 0;border-bottom:10px solid transparent}}
 @media screen and (max-device-width: 480px) {#releasedate {left: 9px !important;}th {padding:0;}td {padding:0;font-size:13px}.headline h1{bold 1.0em/2.5em" Helvetica Neue", Helvetica, Arial, sans-serif;}.lines{width:100% !important;float:none !important;}}
 #bubblechart > div > div:nth-child(1) > div > svg > g:nth-child(3) > g:nth-child(2) > g > circle:nth-child(9){display:none !important;}
 
@@ -164,6 +168,52 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     width: 100%;
 }
 
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+/* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
 /*Line Charts - Revenue Values*/
 
 .revenue {
@@ -261,7 +311,7 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     margin-left: 1%;
     font-size: 18px;
     line-height: 42.9px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }    
     .headline h1 img {
         float: right;
@@ -287,4 +337,3 @@ td {padding:7px;text-align: center;}				.lightbox { display: none; }
     margin-bottom: 2%;
     }
 }
-
