--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,26 @@ td {padding:0px;text-align: center;}				.lightbox { display: none; }
 @media screen and (max-device-width: 480px) {#releasedate {left: 9px !important;}th {padding:0;}td {padding:0;font-size:13px}.headline h1{bold 1.0em/2.5em" Helvetica Neue", Helvetica, Arial, sans-serif;}.lines{width:100% !important;float:none !important;}}
 #bubblechart > div > div:nth-child(1) > div > svg > g:nth-child(3) > g:nth-child(2) > g > circle:nth-child(9){display:none !important;}
 
+	a.tooltip {outline:none; }
+	a.tooltip strong {line-height:30px;}
+	a.tooltip:hover {text-decoration:none;} 
+	a.tooltip span {
+    z-index:10;display:none; padding:14px 20px;
+    margin-top:-30px; margin-left:28px;
+    width:500px; line-height:16px;
+	}
+	a.tooltip:hover span{
+    display:inline; position:absolute; color:#111;
+    border:1px solid #DCA; background:#fffAF0;}
+	.callout {z-index:20;position:absolute;top:30px;border:0;left:-12px;}
+    
+	/*CSS3 extras*/
+	a.tooltip span
+	{
+		border-radius:4px;
+		box-shadow: 5px 5px 8px #CCC;
+	}
+
 /*YTD Sales Line Chart Design*/
 
 /* chart_wrap: temporary responsive tag */
@@ -336,4 +356,6 @@ td {padding:0px;text-align: center;}				.lightbox { display: none; }
     margin-left: 5% !important;
     margin-bottom: 2%;
     }
+	
+
 }
