--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,352 @@ td {padding:0px;text-align: center;}				.lightbox { display: none; }
 		border-radius:4px;
 		box-shadow: 5px 5px 8px #CCC;
 	}
+	
+/* Reliability and Usage */
+
+	*,
+	*::before,
+	*::after {
+	  box-sizing: border-box;
+	}
+
+	a {
+	  text-decoration: none;
+	}
+
+	.containers {
+	  position: absolute;
+	  left: calc(10%);
+	  width: 1352px;
+	  margin: 20px 0;
+	  padding: 30px;
+	  border: 1px dashed #646c71;
+	}
+
+	.side {
+		float: left;
+		width: 219px;
+	  padding-right: 30px;
+	}
+
+	.side h1 {
+		margin: 0;
+		color: #fff;
+		font-size: 1.1em;
+		letter-spacing: 1px;
+	  line-height: 1.3;
+		text-transform: uppercase;
+	  color: black;
+	}
+
+	.side ul {
+		margin: 48px 0;
+		padding: 0;
+		list-style: none;
+		font-size: .9em;
+		text-transform: uppercase;
+	  color: black;
+	}
+
+	.side li {
+		margin: 16px 0;
+	}
+
+	.side li::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+
+	.side a {
+		display: block;
+		padding: 10px;
+		color: #1c8ed6;
+	}
+
+	.side a:focus {
+		outline: 1px solid #fff;
+	}
+
+	.side .selected {
+		background-color: #384248;
+	}
+
+	.side .selected::after {
+		content: '\f105';
+		float: right;
+		color: #7a8185;
+		font-family: 'FontAwesome';
+	}
+
+	.side .key {
+		float: left;
+		color: #7a8185;
+	}
+
+	.side .key::after {
+		content: ':';
+	}
+
+	.side .val {
+		float: right;
+	}
+
+	.side .links li {
+		margin: 4px -10px;
+	}
+
+	.side .stats ul:not(:first-child) {
+		display: none;
+	}
+
+	.main {
+		float: left;
+		width: 721px;
+	    padding-left: 30px;
+		border-left: 1px dashed #646c71;
+	}
+
+	.main ul {
+		width: 920px;
+		height: 112px;
+		margin: 486px 0 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	.main li {
+		float: left;
+		position: relative;
+		z-index: 1;
+		width: 230px;
+		height: 100%;
+		transition: z-index;
+		transition-delay: .8s;
+	}
+
+	.main li::before {
+		content: '\f106';
+		display: block;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		color: #384248;
+		font: 6em/1 'FontAwesome';
+		transform: translate(25%, -50%);
+	}
+
+	.main article {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 1025px;
+		height: 448px;
+		outline: 4px solid #646c71;
+		background-color: #384248;
+		cursor: pointer;
+		transform: translate(-45%, -50%) scale(.20);
+		transition: transform .8s;
+		color: white;
+	}
+
+	.main article:focus {
+		outline-color: #fff;
+	}
+
+	.main .area {
+		position: relative;
+		width: 960px;
+		height: 300px;
+		margin: 32px 64px 48px;
+		font-size: 1.1em;
+	}
+
+	.main .lines {
+		counter-reset: y-axis 120;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
+	.main .lines div {
+		opacity: 0;
+		position: relative;
+		height: 20%;
+		border-top: 1px solid #646c71;
+		transition: opacity .8s;
+	}
+
+	.main .lines div::before {
+		counter-increment: y-axis -20;
+		content: counter(y-axis);
+		display: block;
+		position: absolute;
+		top: -10px;
+		left: -40px;
+		width: 40px;
+		padding-right: 8px;
+		text-align: right;
+	}
+
+	.main .data {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
+	.main dl {
+		float: left;
+		position: relative;
+		width: 80px;
+		height: 300px;
+		margin: 0;
+		text-align: center;
+	}
+
+	.main dt {
+		opacity: 0;
+		position: absolute;
+		bottom: -28px;
+		left: 0;
+		right: 0;
+		transition: opacity .8s;
+	}
+
+	.main dd {
+		position: absolute;
+		bottom: 0;
+		width: 40px;
+		margin: 0 20px;
+		padding-top: 8px;
+		border-top: 1px solid #1c8ed6;
+		list-style: none;
+		color: #fff;
+		background-color: #125c8a;
+	}
+
+	.main dd::after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: #1c8ed6;
+		transition: opacity .8s;
+	}
+
+	.main .dummies :nth-child(1) dd { height: 108px; }
+	.main .dummies :nth-child(2) dd { height: 132px; }
+	.main .dummies :nth-child(3) dd { height: 156px; }
+	.main .dummies :nth-child(4) dd { height: 96px; }
+	.main .dummies :nth-child(5) dd { height: 132px; }
+	.main .dummies :nth-child(6) dd { height: 204px; }
+	.main .dummies :nth-child(7) dd { height: 240px; }
+	.main .dummies :nth-child(8) dd { height: 200px; }
+	.main .dummies :nth-child(9) dd { height: 160px; }
+	.main .dummies :nth-child(10) dd { height: 140px; }
+	.main .dummies :nth-child(11) dd { height: 180px; }
+	.main .dummies :nth-child(12) dd { height: 200px; }
+
+	.main .WEL :nth-child(1) dd { height: 216px; }
+	.main .WEL :nth-child(2) dd { height: 168px; }
+	.main .WEL :nth-child(3) dd { height: 192px; }
+	.main .WEL :nth-child(4) dd { height: 144px; }
+	.main .WEL :nth-child(5) dd { height: 192px; }
+	.main .WEL :nth-child(6) dd { height: 240px; }
+	.main .WEL :nth-child(7) dd { height: 252px; }
+	.main .WEL :nth-child(8) dd { height: 200px; }
+	.main .WEL :nth-child(9) dd { height: 160px; }
+	.main .WEL :nth-child(10) dd { height: 140px; }
+	.main .WEL :nth-child(11) dd { height: 180px; }
+	.main .WEL :nth-child(12) dd { height: 200px; }
+
+	.main .WileyPLUS :nth-child(1) dd { height: 228px; }
+	.main .WileyPLUS :nth-child(2) dd { height: 264px; }
+	.main .WileyPLUS :nth-child(3) dd { height: 216px; }
+	.main .WileyPLUS :nth-child(4) dd { height: 204px; }
+	.main .WileyPLUS :nth-child(5) dd { height: 156px; }
+	.main .WileyPLUS :nth-child(6) dd { height: 180px; }
+	.main .WileyPLUS :nth-child(7) dd { height: 120px; }
+	.main .WileyPLUS :nth-child(8) dd { height: 200px; }
+	.main .WileyPLUS :nth-child(9) dd { height: 160px; }
+	.main .WileyPLUS :nth-child(10) dd { height: 140px; }
+	.main .WileyPLUS :nth-child(11) dd { height: 180px; }
+	.main .WileyPLUS :nth-child(12) dd { height: 200px; }
+
+	.main .WPLS :nth-child(1) dd { height: 228px; }
+	.main .WPLS :nth-child(2) dd { height: 264px; }
+	.main .WPLS :nth-child(3) dd { height: 216px; }
+	.main .WPLS :nth-child(4) dd { height: 204px; }
+	.main .WPLS :nth-child(5) dd { height: 156px; }
+	.main .WPLS :nth-child(6) dd { height: 180px; }
+	.main .WPLS :nth-child(7) dd { height: 120px; }
+	.main .WPLS :nth-child(8) dd { height: 200px; }
+	.main .WPLS :nth-child(9) dd { height: 160px; }
+	.main .WPLS :nth-child(10) dd { height: 140px; }
+	.main .WPLS :nth-child(11) dd { height: 180px; }
+	.main .WPLS :nth-child(12) dd { height: 200px; }
+
+	.main article h1 {
+		height: 50px;
+		margin: 16px;
+		text-align: center;
+		text-transform: none;
+		letter-spacing: .05em;
+		font-size: 2.8em;
+		font-weight: normal;
+		transform: translateY(-16px);
+		transition: transform .8s;
+	}
+
+	/* Chrome/Safari/iOS fix: Bumping up the z-index from the start of
+	   the expand animation until the end of the shrink animation
+	   prevents unnecessary repaints on subsequent <article> elements. */
+	.main .active {
+		z-index: 2;
+		transition-delay: 0s;
+	}
+
+	.main li:nth-child(1).active article {
+		transform: translate(-114px, -542px) scale(1);
+	}
+	.main li:nth-child(2).active article {
+		transform: translate(-344px, -542px) scale(1);
+	}
+	.main li:nth-child(3).active article {
+		transform: translate(-574px, -542px) scale(1);
+	}
+	.main li:nth-child(4).active article {
+		transform: translate(-800px, -542px) scale(1);
+	}
+
+	.main .active article {
+		cursor: auto;
+	}
+
+	.main .active article {
+		outline-width: 1px;
+	}
+
+	.main .active .lines div,
+	.main .active dt {
+		opacity: 1;
+	}
+
+	.main .active dd::after {
+		opacity: 0;
+	}
+
+	.main .active article h1 {
+		transform: translateY(0);
+	}	
+	
 
 /*YTD Sales Line Chart Design*/
 
