--- a/css/main.css
+++ b/css/main.css
@@ -405,8 +405,9 @@ div.hopscotch-bubble .hide-all {
 }
 div.hopscotch-bubble h3 {
   color: white;
-  font-family: monospace;
+  font-family: 'Open Sans', sans-serif;
   font-weight:bold;
+  text-transform: uppercase;
   font-size: 16px;
   line-height: 19px;
   margin: -1px 15px 0 0;
@@ -534,15 +535,15 @@ div.hopscotch-bubble .hopscotch-bubble-arrow-container.right {
 }
 div.hopscotch-bubble .hopscotch-bubble-arrow-container.right .hopscotch-bubble-arrow {
   border-bottom: 17px solid transparent;
-  border-left: 17px solid #ffffff;
+  border-left: 17px solid #4E4B5C;
   border-top: 17px solid transparent;
   position: relative;
   left: -7px;
   top: -34px;
 }
 div.hopscotch-bubble .hopscotch-bubble-arrow-container.right .hopscotch-bubble-arrow-border {
-  border-left: 17px solid #000000;
-  border-left: 17px solid rgba(0, 0, 0, 0.5);
+ /* border-left: 17px solid #000000;
+  border-left: 17px solid rgba(0, 0, 0, 0.5); */
   border-bottom: 17px solid transparent;
   border-top: 17px solid transparent;
 }
@@ -718,7 +719,7 @@ a.tooltip {outline:none; }
 	a.tooltip:hover {text-decoration:none;} 
 	a.tooltip span {
     z-index:10;display:none; padding:14px 20px;
-    margin-top:-60px; margin-left:28px;
+    margin-top:-30px; margin-left:28px;
     width:300px; line-height:16px; font-size:small;
 	}
 	a.tooltip:hover span{
@@ -770,6 +771,442 @@ a.tooltip {outline:none; }
     margin-bottom: -5px;
 }
 
+
+/*Reliability and Usage */
+
+.chtitle{
+     width:100%;
+     text-align:center;
+     color:black;
+     font-family: 'Open Sans', sans-serif;
+     font-size:25pt;
+     margin-top:3%;
+   }
+
+	.containers {
+	  position: relative;
+	  width: 100%;
+	  margin: 0px 0;
+	  padding: 0px;
+	}
+
+	.side {
+    position: relative;
+    float: left;
+    width: 100%;
+    margin-top:2%;
+    margin-left:1%;
+	}
+
+	.side h1 {
+		margin: 0;
+		font-size: 1.1em;
+		letter-spacing: 1px;
+	    line-height: 1.3;
+		text-transform: uppercase;
+	    color: black;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: bold;
+	}
+
+	.side ul {
+		margin: 48px 0;
+		padding: 0;
+		list-style: none;
+		font-size: .9em;
+		text-transform: uppercase;
+	  color: black;
+    float:left;
+    position:relative;
+    width:50%;
+	}
+
+	.side li {
+		margin: 16px 0;
+	}
+
+	.side li::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+
+	.side a {
+		display: block;
+		padding: 0px;
+		color: #1c8ed6;
+	}
+
+	.side a:focus {
+		outline: 1px solid #fff;
+	}
+
+	.side .selected {
+		background-color: #384248;
+	}
+
+	.side .selected::after {
+		content: '\f105';
+		float: right;
+		color: #7a8185;
+		font-family: 'FontAwesome';
+	}
+
+	.side .key {
+		float: left;
+		color: #7a8185;
+	}
+
+	.side .key::after {
+		content: ':';
+	}
+
+	.side .val {
+		float: right;
+    margin-right:25%;
+	}
+
+	.side .links li {
+		margin: 4px -10px;
+	}
+
+	.side .stats ul:not(:first-child) {
+		display: none;
+	}
+
+	.main {
+    float: left;
+    width: 100%;
+    padding-left: 10px;
+	}
+
+	.main ul {
+		width: 920px;
+		height: 112px;
+		margin: 486px 0 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	.main li {
+		float: left;
+		position: relative;
+		z-index: 1;
+		width: 130px;
+		height: 100%;
+		transition: z-index;
+		transition-delay: .8s;
+	}
+
+	.main li::before {
+		content: '\f106';
+		display: block;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		color: #384248;
+		font: 6em/1 'FontAwesome';
+		transform: translate(-75%, -40%);
+	}
+
+.main article {
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    width: 500px;
+    height: 450px;
+    outline: 4px solid #646c71;
+    background-color: #fff;
+    cursor: pointer;
+    transform: translate(-60%, -48%) scale(.20);
+    transition: transform .8s;
+    color: white;
+    padding-top: 3%;
+}
+
+	.main article:focus {
+		outline-color: #fff;
+	}
+
+	.main .area {
+		position: relative;
+		width: 535px;
+		height: 300px;
+        margin: 32px 40px 48px;
+		font-size: 1.1em;
+	}
+
+	.main .linez {
+		counter-reset: y-axis 120;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	    color: black;
+		width: 85%;	
+	}
+
+	.main .linez div {
+		opacity: 0;
+		position: relative;
+		height: 20%;
+		border-top: 1px solid #000000;
+		transition: opacity .8s;
+	}
+
+	.main .linez div::before {
+		counter-increment: y-axis -20;
+		content: counter(y-axis);
+		display: block;
+		position: absolute;
+		top: -10px;
+		left: -40px;
+		width: 40px;
+		padding-right: 8px;
+		text-align: right;
+	  color: black;
+	}
+
+	.main .data {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	   color: black;
+       margin-left: -15px;
+	}
+
+	.main dl {
+		float: left;
+		position: relative;
+		width: 65px;
+		height: 300px;
+		margin: 0;
+		text-align: center;
+        margin-top:5px;
+	}
+
+	dq{
+	  float: left;
+		position: relative;
+		width: 45px;
+		height: 300px;
+		margin: 0;
+		text-align: center;
+        margin-top:5px;
+	}
+
+	.main dt {
+		opacity: 0;
+		position: absolute;
+		bottom: -28px;
+		left: 0;
+		right: 0;
+		transition: opacity .8s;
+	}
+
+	.main dd {
+		position: absolute;
+		bottom: 0;
+		width: 40px;
+		margin: 0 40px;
+		padding-top: 8px;
+		border-top: 1px solid #FFCC33;
+		list-style: none;
+		color: #fff;
+		background-color: #FFCC33;
+	}
+
+	.main .dummies :nth-child(2) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .dummies :nth-child(4) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .dummies :nth-child(6) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .dummies :nth-child(8) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+
+	.main .WEL :nth-child(2) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WEL :nth-child(4) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WEL :nth-child(6) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WEL :nth-child(8) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+
+	.main .WileyPLUS :nth-child(2) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WileyPLUS :nth-child(4) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WileyPLUS :nth-child(6) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WileyPLUS :nth-child(8) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+
+	.main .WPLS :nth-child(2) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WPLS :nth-child(4) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WPLS :nth-child(6) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+	.main .WPLS :nth-child(8) dd {
+		border-top: 1px solid #66CC66;  
+		background-color: #66CC66;
+	}
+
+	.main dd::after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		border-top: 1px solid #FFCC33;  
+		background-color: #FFCC33;
+		transition: opacity .8s;
+	}
+
+	.main .dummies :nth-child(1) dd { height: 108px; }
+	.main .dummies :nth-child(2) dd { height: 132px; }
+	.main .dummies :nth-child(3) dd { height: 156px; }
+	.main .dummies :nth-child(4) dd { height: 96px; }
+	.main .dummies :nth-child(5) dd { height: 132px; }
+	.main .dummies :nth-child(6) dd { height: 204px; }
+	.main .dummies :nth-child(7) dd { height: 240px; }
+	.main .dummies :nth-child(8) dd { height: 200px; }
+	.main .dummies :nth-child(9) dd { height: 160px; }
+	.main .dummies :nth-child(10) dd { height: 140px; }
+	.main .dummies :nth-child(11) dd { height: 180px; }
+	.main .dummies :nth-child(12) dd { height: 200px; }
+
+	.main .WEL :nth-child(1) dd { height: 216px; }
+	.main .WEL :nth-child(2) dd { height: 168px; }
+	.main .WEL :nth-child(3) dd { height: 192px; }
+	.main .WEL :nth-child(4) dd { height: 144px; }
+	.main .WEL :nth-child(5) dd { height: 192px; }
+	.main .WEL :nth-child(6) dd { height: 240px; }
+	.main .WEL :nth-child(7) dd { height: 252px; }
+	.main .WEL :nth-child(8) dd { height: 200px; }
+	.main .WEL :nth-child(9) dd { height: 160px; }
+	.main .WEL :nth-child(10) dd { height: 140px; }
+	.main .WEL :nth-child(11) dd { height: 180px; }
+	.main .WEL :nth-child(12) dd { height: 200px; }
+
+	.main .WileyPLUS :nth-child(1) dd { height: 228px; }
+	.main .WileyPLUS :nth-child(2) dd { height: 264px; }
+	.main .WileyPLUS :nth-child(3) dd { height: 216px; }
+	.main .WileyPLUS :nth-child(4) dd { height: 204px; }
+	.main .WileyPLUS :nth-child(5) dd { height: 156px; }
+	.main .WileyPLUS :nth-child(6) dd { height: 180px; }
+	.main .WileyPLUS :nth-child(7) dd { height: 120px; }
+	.main .WileyPLUS :nth-child(8) dd { height: 200px; }
+	.main .WileyPLUS :nth-child(9) dd { height: 160px; }
+	.main .WileyPLUS :nth-child(10) dd { height: 140px; }
+	.main .WileyPLUS :nth-child(11) dd { height: 180px; }
+	.main .WileyPLUS :nth-child(12) dd { height: 200px; }
+
+	.main .WPLS :nth-child(1) dd { height: 228px; }
+	.main .WPLS :nth-child(2) dd { height: 264px; }
+	.main .WPLS :nth-child(3) dd { height: 216px; }
+	.main .WPLS :nth-child(4) dd { height: 204px; }
+	.main .WPLS :nth-child(5) dd { height: 156px; }
+	.main .WPLS :nth-child(6) dd { height: 180px; }
+	.main .WPLS :nth-child(7) dd { height: 120px; }
+	.main .WPLS :nth-child(8) dd { height: 200px; }
+	.main .WPLS :nth-child(9) dd { height: 160px; }
+	.main .WPLS :nth-child(10) dd { height: 140px; }
+	.main .WPLS :nth-child(11) dd { height: 180px; }
+	.main .WPLS :nth-child(12) dd { height: 200px; }
+
+	.main article h1 {
+		height: 50px;
+		margin: 16px;
+		text-align: center;
+		text-transform: none;
+		letter-spacing: .05em;
+		font-size: 2.8em;
+		font-weight: normal;
+		transform: translateY(-16px);
+		transition: transform .8s;
+	  color: black;
+	}
+
+	/* Chrome/Safari/iOS fix: Bumping up the z-index from the start of
+	   the expand animation until the end of the shrink animation
+	   prevents unnecessary repaints on subsequent <article> elements. */
+	.main .active {
+		z-index: 2;
+		transition-delay: 0s;
+	}
+
+	.main li:nth-child(1).active article {
+		transform: translate(-114px, -542px) scale(1);
+	}
+	.main li:nth-child(2).active article {
+		transform: translate(-244px, -542px) scale(1);
+	}
+	.main li:nth-child(3).active article {
+		transform: translate(-374px, -542px) scale(1);
+	}
+	.main li:nth-child(4).active article {
+		transform: translate(-500px, -542px) scale(1);
+	}
+
+	.main .active article {
+		cursor: auto;
+	}
+
+	.main .active article {
+		outline-width: 1px;
+	}
+
+	.main .active .linez div,
+	.main .active dt {
+		opacity: 1;
+	}
+
+	.main .active dd::after {
+		opacity: 0;
+	}
+
+	.main .active article h1 {
+		transform: translateY(0);
+	}
+	
 
 /*spacing adjustments*/
 
