--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -123,7 +123,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #222; }
 
 
@@ -265,12 +265,6 @@ td {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #3399cc;border-right: 1px solid #3399cc; }
-th:first-child,
-td:first-child {
-  padding-left: 5px; }
-th:last-child,
-td:last-child {
-  padding-right: 5px; }
 
 
 /* Spacing
